=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.027 - Under Development

=over

=item *

Added alt_tag and alt_tag_like searching to L<Krang::Media>, also added
as an option in Media advanced find screen. [Matt]

=item * 

Clicking Story save/save and stay now reorders elements as well. [Matt]

=item *

L<Krang::Story>->find() can now search over a list of site_ids.
[Peter]

=item *

Bugfix to L<Krang::Category>->deserialize_xml().  Circular
dependencies were not being handled properly, causing imports of some
.kds files to fail. [Peter]

=item *

Upgraded DBD-mysql to 2.9004.  [Peter]

=item *

Bugfix to L<Krang::Dataset> - now xml files are validated based on
thier apperance in the index.xml file, as opposed to using File::Find
in the xml dir. [Matt]

=item *

Added session caching of search/advanced search options for 
Story/Media/Template. [Matt]

=item *

Added L<Krang::Publisher>->publish_context() - a means of storing
arguments during the publish of a given story. [Peter]

=item *

Added storage of sort order and sort by to session cache in 
L<Krang::HTMLPager>. [Matt]

=item *

Bugfix in L<Krang::Schedule> - alerts were not being run because 
of some incomplete code meant to check for valid alert id. [Matt]

=item * 

Made changes in media UI to:

1. add 'publish to preview' button and underlying functionality
2. cause 'publish' button in edit screen to also preview the media
3. remove the 'reset' button.
4. have the 'Publish' button appear on the new media screen, no need to 
have to click save first. [Matt]

=item *

Small bugfix to the Solaris C<Platform.pm> [Joseph Sacco]

=item *

C<bin/krang_upgrade> now supports remote MySQL databases.  [Aaron
Ross]

=item *

Bugfix for C<bin/krang_publish>, now correctly counts media total
and time with --to-preview option. [Matt]

=item *

Added C<bin/krang_expunge> - designed to work in conjunction with